Add VS Code extension marketplace files

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -15,8 +15,12 @@
   "categories": [
     "Other",
     "Debuggers",
-    "Extension Packs"
+    "Testing"
   ],
+  "galleryBanner": {
+    "color": "#1e88e5",
+    "theme": "dark"
+  },
   "keywords": [
     "salesforce",
     "governor-limits",
