--- a/packages/vscode/.vscodeignore
+++ b/packages/vscode/.vscodeignore
@@ -1,14 +1,16 @@
 .vscode/**
 .vscode-test/**
 src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
 node_modules/**
 webpack.config.js
 .vscodeignore
-../../**
+../../.git/**
+../../node_modules/**
+../../sf-monitor.log
+../../package.json
+../../package-lock.json
+../../LICENSE
+../../README.md
+../../.gitignore
+../cli/**
+../shared/**
