--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "sf-monitor-vscode",
   "displayName": "Salesforce Monitor",
   "description": "Real-time Salesforce governor limits monitoring for VS Code",
-  "version": "1.5.0",
+  "version": "1.5.4",
   "publisher": "sf-monitor",
   "repository": {
     "type": "git",
@@ -181,15 +181,15 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "pretest": "npm run lint",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "test": "node ./test/runTest.js",
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
+    "package-extension": "vsce package --out ./dist/",
     "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint"
+    "watch-tests": "tsc -p . -w --outDir out"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
