--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,8 +2,9 @@
   "name": "sf-monitor-vscode",
   "displayName": "sf-monitor",
   "description": "Real-time Salesforce governor limits monitoring for VS Code",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "publisher": "sf-monitor",
+  "icon": "media/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/thedhanawada/sf-monitor.git",
